tests: Write tests for reading from a file